--- a/Test/index.html
+++ b/Test/index.html
@@ -6,6 +6,6 @@
     <title>Test</title>
 </head>
 <body>
-   Testing that I can get this to GitHub 
+   Testing that I can get this to GitHub! 
 </body>
 </html>
